AC_INIT([valace], [0.1.0], [sejerpz@tin.it], [valace])
AC_CONFIG_SRCDIR([Makefile.am])
AC_CONFIG_AUX_DIR([.])
AC_CONFIG_HEADERS(config.h)
AM_INIT_AUTOMAKE([dist-bzip2])
AM_MAINTAINER_MODE

AC_CONFIG_SUBDIRS([glibce])

AC_PROG_CC
AM_PROG_CC_C_O
AC_PROG_LIBTOOL

AC_CONFIG_MACRO_DIR([m4])

AC_PATH_PROG(VALAC, valac, valac)
AC_SUBST(VALAC)

AH_TEMPLATE([GETTEXT_PACKAGE], [Package name for gettext])
GETTEXT_PACKAGE=valace
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE")
AC_SUBST(GETTEXT_PACKAGE)
AM_GLIB_GNU_GETTEXT
IT_PROG_INTLTOOL([0.35.0])

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)

GLIB_REQUIRED=2.12.0

PKG_CHECK_MODULES(VALACE, glib-2.0 >= $GLIB_REQUIRED gobject-2.0 >= $GLIB_REQUIRED)
AC_SUBST(VALACE_CFLAGS)
AC_SUBST(VALACE_LIBS)

AC_CONFIG_FILES([
	Makefile
	po/Makefile.in
	valaforms/vforms/Makefile
	valaforms/examples/Makefile
	valaforms/Makefile])

AC_OUTPUT
